@@ -1,0 +1,36 @@
+# Copyright 2021 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+# This test case checks that the 'inferior' command, when given no
+# argument, displays information about the inferior currently active.
+
+standard_testfile
+
+if { [prepare_for_testing "failed to prepare" \
+	${testfile} ${srcfile}] } {
+    return
+}
+
+gdb_test "inferior" "\[Current inferior is 1 \[<null>\] (.*)\]" "inferior not running"
+
+if { ![runto_main] } {
+    untested "could not run to main"
+    return
+}
+
+gdb_test "inferior" {\[Current inferior is 1 \[.*\] (.*)\]} "inferior running"
+gdb_test "clone-inferior" "Added inferior 2.*" "create new inferior"
+gdb_test "inferior 2" "\[Switching to inferior 2 \[<null>\] (.*)]" "change inferior"
+gdb_test "inferior" "\[Current inferior is 2 \[<null>\] (.*)\]" "show new inferior"
